--- a/public/components/header.html
+++ b/public/components/header.html
@@ -4,7 +4,7 @@
             <div class="w-14 h-14">
                 <img id="site-logo" src="" alt="Galway Jam Circle Logo" class="rounded-full" />
             </div>
-            <div class="text-xl sm:text-2xl font-bold tracking-tight font-secondary">Galway Jam Circle</div>
+            <div class="text-white text-xl sm:text-2xl font-bold tracking-tight font-secondary">Galway Jam Circle</div>
         </div>
         <div class="hidden md:flex items-center space-x-2">
             <div class="theme-switcher">
