fix: align theme and components with new design

--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -63,19 +63,19 @@
           </a>
         </div>
         <p>© 2025 Galway Jam Circle. v1.5. All Rights Reserved.</p>
-        <p class="text-sm text-stone-400 mt-2">
+        <p class="text-sm text-white/80 mt-2">
           Bringing music to the people of Galway.
         </p>
         <div class="space-x-4">
           <a
             href="feedback.html"
-            class="text-sm text-stone-400 hover:text-white mt-4 inline-block"
+            class="text-sm text-white/80 hover:text-white mt-4 inline-block"
             >Website Feedback</a
           >
           <a
             href="#"
             id="admin-mode-btn"
-            class="text-sm text-stone-400 hover:text-white mt-4 inline-block"
+            class="text-sm text-white/80 hover:text-white mt-4 inline-block"
             >Admin</a
           >
         </div>
