--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-primary text-white/80 py-8">
+<footer class="bg-primary text-white/80 py-8 text-white">
       <div class="container mx-auto px-6 text-center">
         <div class="flex justify-center items-start space-x-6 mb-4">
           <div class="text-center">
