--- a/public/components/community.html
+++ b/public/components/community.html
@@ -12,7 +12,7 @@
     <div class="text-center mb-8 admin-controls">
         <button id="add-community-item-btn" class="px-6 py-2 bg-green text-white font-bold rounded-full hover:bg-opacity-80 transition duration-300 shadow-md">Add New Item</button>
     </div>
-    <form id="add-community-form" class="max-w-3xl mx-auto mb-8 p-6 bg-white rounded-lg shadow-inner border border-grey-light" style="display: none;">
+    <form id="add-community-form" class="max-w-3xl mx-auto mb-8 p-6 bg-white rounded-lg shadow-inner border border-grey-light hidden">
         <h3 id="community-form-title" class="text-xl font-bold text-primary mb-4 font-secondary">Add New Item</h3>
         <input type="hidden" id="edit-community-id" />
         <div class="mb-4">
