--- a/public/components/gallery.html
+++ b/public/components/gallery.html
@@ -53,6 +53,7 @@
         <div class="mb-4">
             <label for="photo-file" class="block text-grey-dark font-bold mb-2 text-left">Upload Photo</label>
             <input type="file" id="photo-file" class="w-full p-2 border rounded" accept="image/*"/>
+            <div id="photo-preview-container" class="mt-2"></div>
             <p class="text-sm text-grey-medium mt-1 text-left">Or paste a URL below...</p>
         </div>
         <div class="mb-4">
